<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bring_up</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="1986830413@qq.com">ling</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>fast_lio</depend>
  <depend>livox_ros_driver2</depend>
  <depend>rm_serial_driver</depend>
  <depend>my_nav</depend>
  <depend>pcd2pgm</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
